--- a/README
+++ b/README
@@ -21,12 +21,13 @@ I use a separate pair of wires for the 5 volts need inside of the panel.
 
 GPIO PIN - Description - Ethernet Wire
 
-14 - Door Motor Open - Solid Brown
-15 - Door Motor Close - Brown/White
-18 - Open Button - Solid Green
-23 - Close Button - Green/White
+14 - Door Motor Open - Blue
+15 - Door Motor Close - Blue/White
+18 - Open Button - Orange/White
+23 - Close Button - Orange
+24 - Stop Button - Brown/White
+25 - Schedule enable/disable - Brown
 5 - Coop light relay - N/A
-17 - Coop light on/off button. - Solid Orange
-27 - LCD display on/off.  - Orange/White
-SDA - SDA - Solid Blue
+17 - Coop light on/off button - Green/White
+27 - LCD display on/off.  - Green - SDA - Solid Blue
 SCL - SCL - Blue/White
